--- a/src/views/_includes/blocks/catalogModels2.pug
+++ b/src/views/_includes/blocks/catalogModels2.pug
@@ -17,7 +17,7 @@ section.catalogModels.catalogModels2
             .card__hover-group
               h3.card__hover-title Отделка   
               p.card__hover-description финишная отделка шелковисто-матовая или глянцевая
-            .button.card__hover-button.button--primary Посмотреть подробности
+            a(href="product.html").button.card__hover-button.button--primary Посмотреть подробности
         picture
           source(media="(min-width: 320px)", srcset="assets/img/models/1.webp", type="image/webp")
           source(media="(min-width: 320px)", srcset="assets/img/models/1.jpg", type="image/webp")
@@ -45,7 +45,7 @@ section.catalogModels.catalogModels2
             .card__hover-group
               h3.card__hover-title Отделка   
               p.card__hover-description финишная отделка шелковисто-матовая или глянцевая
-            .button.card__hover-button.button--primary Посмотреть подробности
+            a(href="product.html").button.card__hover-button.button--primary Посмотреть подробности
         picture
           source(media="(min-width: 320px)", srcset="assets/img/models/2.webp", type="image/webp")
           source(media="(min-width: 320px)", srcset="assets/img/models/2.jpg", type="image/webp")
@@ -73,7 +73,7 @@ section.catalogModels.catalogModels2
             .card__hover-group
               h3.card__hover-title Отделка   
               p.card__hover-description финишная отделка шелковисто-матовая или глянцевая
-            .button.card__hover-button.button--primary Посмотреть подробности
+            a(href="product.html").button.card__hover-button.button--primary Посмотреть подробности
         picture
           source(media="(min-width: 320px)", srcset="assets/img/models/3.webp", type="image/webp")
           source(media="(min-width: 320px)", srcset="assets/img/models/3.jpg", type="image/webp")
@@ -101,7 +101,7 @@ section.catalogModels.catalogModels2
             .card__hover-group
               h3.card__hover-title Отделка   
               p.card__hover-description финишная отделка шелковисто-матовая или глянцевая
-            .button.card__hover-button.button--primary Посмотреть подробности
+            a(href="product.html").button.card__hover-button.button--primary Посмотреть подробности
         picture
           source(media="(min-width: 320px)", srcset="assets/img/models/4.webp", type="image/webp")
           source(media="(min-width: 320px)", srcset="assets/img/models/4.jpg", type="image/webp")
@@ -129,7 +129,7 @@ section.catalogModels.catalogModels2
             .card__hover-group
               h3.card__hover-title Отделка   
               p.card__hover-description финишная отделка шелковисто-матовая или глянцевая
-            .button.card__hover-button.button--primary Посмотреть подробности
+            a(href="product.html").button.card__hover-button.button--primary Посмотреть подробности
         picture
           source(media="(min-width: 320px)", srcset="assets/img/models/5.webp", type="image/webp")
           source(media="(min-width: 320px)", srcset="assets/img/models/5.jpg", type="image/webp")
@@ -157,7 +157,7 @@ section.catalogModels.catalogModels2
             .card__hover-group
               h3.card__hover-title Отделка   
               p.card__hover-description финишная отделка шелковисто-матовая или глянцевая
-            .button.card__hover-button.button--primary Посмотреть подробности
+            a(href="product.html").button.card__hover-button.button--primary Посмотреть подробности
         picture
           source(media="(min-width: 320px)", srcset="assets/img/models/1.webp", type="image/webp")
           source(media="(min-width: 320px)", srcset="assets/img/models/1.jpg", type="image/webp")
