--- a/src/views/_includes/blocks/content/popular.pug
+++ b/src/views/_includes/blocks/content/popular.pug
@@ -22,7 +22,7 @@ section.others
                           .card__hover-group
                             h3.card__hover-title Отделка   
                             p.card__hover-description финишная отделка шелковисто-матовая или глянцевая
-                          .button.card__hover-button.button--primary Посмотреть подробности
+                          a(href="product.html").button.card__hover-button.button--primary Посмотреть подробности
                       picture
                         source(media="(min-width: 320px)", srcset="assets/img/models/1.webp", type="image/webp")
                         source(media="(min-width: 320px)", srcset="assets/img/models/1.jpg", type="image/webp")
@@ -51,7 +51,7 @@ section.others
                           .card__hover-group
                             h3.card__hover-title Отделка   
                             p.card__hover-description финишная отделка шелковисто-матовая или глянцевая
-                          .button.card__hover-button.button--primary Посмотреть подробности
+                          a(href="product.html").button.card__hover-button.button--primary Посмотреть подробности
                       picture
                         source(media="(min-width: 320px)", srcset="assets/img/models/2.webp", type="image/webp")
                         source(media="(min-width: 320px)", srcset="assets/img/models/2.jpg", type="image/webp")
@@ -80,7 +80,7 @@ section.others
                           .card__hover-group
                             h3.card__hover-title Отделка   
                             p.card__hover-description финишная отделка шелковисто-матовая или глянцевая
-                          .button.card__hover-button.button--primary Посмотреть подробности
+                          a(href="product.html").button.card__hover-button.button--primary Посмотреть подробности
                       picture
                         source(media="(min-width: 320px)", srcset="assets/img/models/3.webp", type="image/webp")
                         source(media="(min-width: 320px)", srcset="assets/img/models/3.jpg", type="image/webp")
@@ -109,7 +109,7 @@ section.others
                           .card__hover-group
                             h3.card__hover-title Отделка   
                             p.card__hover-description финишная отделка шелковисто-матовая или глянцевая
-                          .button.card__hover-button.button--primary Посмотреть подробности
+                          a(href="product.html").button.card__hover-button.button--primary Посмотреть подробности
                       picture
                         source(media="(min-width: 320px)", srcset="assets/img/models/1.webp", type="image/webp")
                         source(media="(min-width: 320px)", srcset="assets/img/models/1.jpg", type="image/webp")
@@ -138,7 +138,7 @@ section.others
                           .card__hover-group
                             h3.card__hover-title Отделка   
                             p.card__hover-description финишная отделка шелковисто-матовая или глянцевая
-                          .button.card__hover-button.button--primary Посмотреть подробности
+                          a(href="product.html").button.card__hover-button.button--primary Посмотреть подробности
                       picture
                         source(media="(min-width: 320px)", srcset="assets/img/models/2.webp", type="image/webp")
                         source(media="(min-width: 320px)", srcset="assets/img/models/2.jpg", type="image/webp")
@@ -167,7 +167,7 @@ section.others
                           .card__hover-group
                             h3.card__hover-title Отделка   
                             p.card__hover-description финишная отделка шелковисто-матовая или глянцевая
-                          .button.card__hover-button.button--primary Посмотреть подробности
+                          a(href="product.html").button.card__hover-button.button--primary Посмотреть подробности
                       picture
                         source(media="(min-width: 320px)", srcset="assets/img/models/3.webp", type="image/webp")
                         source(media="(min-width: 320px)", srcset="assets/img/models/3.jpg", type="image/webp")
