--- a/src/views/_includes/blocks/models.pug
+++ b/src/views/_includes/blocks/models.pug
@@ -31,7 +31,7 @@ section.models
             .card__hover-group
               h3.card__hover-title Отделка   
               p.card__hover-description финишная отделка шелковисто-матовая или глянцевая
-            .button.card__hover-button.button--primary Посмотреть подробности
+            a(href="product.html").button.card__hover-button.button--primary Посмотреть подробности
         picture
           source(media="(min-width: 320px)", srcset="assets/img/models/1.webp", type="image/webp")
           source(media="(min-width: 320px)", srcset="assets/img/models/1.jpg", type="image/webp")
@@ -59,7 +59,7 @@ section.models
             .card__hover-group
               h3.card__hover-title Отделка   
               p.card__hover-description финишная отделка шелковисто-матовая или глянцевая
-            .button.card__hover-button.button--primary Посмотреть подробности
+            a(href="product.html").button.card__hover-button.button--primary Посмотреть подробности
         picture
           source(media="(min-width: 320px)", srcset="assets/img/models/2.webp", type="image/webp")
           source(media="(min-width: 320px)", srcset="assets/img/models/2.jpg", type="image/webp")
@@ -87,7 +87,7 @@ section.models
             .card__hover-group
               h3.card__hover-title Отделка   
               p.card__hover-description финишная отделка шелковисто-матовая или глянцевая
-            .button.card__hover-button.button--primary Посмотреть подробности
+            a(href="product.html").button.card__hover-button.button--primary Посмотреть подробности
         picture
           source(media="(min-width: 320px)", srcset="assets/img/models/3.webp", type="image/webp")
           source(media="(min-width: 320px)", srcset="assets/img/models/3.jpg", type="image/webp")
@@ -115,7 +115,7 @@ section.models
             .card__hover-group
               h3.card__hover-title Отделка   
               p.card__hover-description финишная отделка шелковисто-матовая или глянцевая
-            .button.card__hover-button.button--primary Посмотреть подробности
+            a(href="product.html").button.card__hover-button.button--primary Посмотреть подробности
         picture
           source(media="(min-width: 320px)", srcset="assets/img/models/4.webp", type="image/webp")
           source(media="(min-width: 320px)", srcset="assets/img/models/4.jpg", type="image/webp")
@@ -143,7 +143,7 @@ section.models
             .card__hover-group
               h3.card__hover-title Отделка   
               p.card__hover-description финишная отделка шелковисто-матовая или глянцевая
-            .button.card__hover-button.button--primary Посмотреть подробности
+            a(href="product.html").button.card__hover-button.button--primary Посмотреть подробности
         picture
           source(media="(min-width: 320px)", srcset="assets/img/models/5.webp", type="image/webp")
           source(media="(min-width: 320px)", srcset="assets/img/models/5.jpg", type="image/webp")
@@ -171,7 +171,7 @@ section.models
             .card__hover-group
               h3.card__hover-title Отделка   
               p.card__hover-description финишная отделка шелковисто-матовая или глянцевая
-            .button.card__hover-button.button--primary Посмотреть подробности
+            a(href="product.html").button.card__hover-button.button--primary Посмотреть подробности
         picture
           source(media="(min-width: 320px)", srcset="assets/img/models/1.webp", type="image/webp")
           source(media="(min-width: 320px)", srcset="assets/img/models/1.jpg", type="image/webp")
@@ -182,7 +182,7 @@ section.models
         span.card__info-price от 40 215 ₽/м²
       p.card__description Роскошная дворцовая классика
 
-    button.button.button--primary.models__button
+    a(href="catalog.html").button.button--primary.models__button
       h3.title.models__button-title 127 моделей
       span.models__button-subtitle со скидкой
       span.models__button-text Посмотреть все
