--- a/src/views/_includes/blocks/product/others.pug
+++ b/src/views/_includes/blocks/product/others.pug
@@ -25,7 +25,7 @@ section.others
                           .card__hover-group
                             h3.card__hover-title Отделка   
                             p.card__hover-description финишная отделка шелковисто-матовая или глянцевая
-                          .button.card__hover-button.button--primary Посмотреть подробности
+                          a(href="product.html").button.card__hover-button.button--primary Посмотреть подробности
                       picture
                         source(media="(min-width: 320px)", srcset="assets/img/models/1.webp", type="image/webp")
                         source(media="(min-width: 320px)", srcset="assets/img/models/1.jpg", type="image/webp")
@@ -54,7 +54,7 @@ section.others
                           .card__hover-group
                             h3.card__hover-title Отделка   
                             p.card__hover-description финишная отделка шелковисто-матовая или глянцевая
-                          .button.card__hover-button.button--primary Посмотреть подробности
+                          a(href="product.html").button.card__hover-button.button--primary Посмотреть подробности
                       picture
                         source(media="(min-width: 320px)", srcset="assets/img/models/2.webp", type="image/webp")
                         source(media="(min-width: 320px)", srcset="assets/img/models/2.jpg", type="image/webp")
@@ -83,7 +83,7 @@ section.others
                           .card__hover-group
                             h3.card__hover-title Отделка   
                             p.card__hover-description финишная отделка шелковисто-матовая или глянцевая
-                          .button.card__hover-button.button--primary Посмотреть подробности
+                          a(href="product.html").button.card__hover-button.button--primary Посмотреть подробности
                       picture
                         source(media="(min-width: 320px)", srcset="assets/img/models/3.webp", type="image/webp")
                         source(media="(min-width: 320px)", srcset="assets/img/models/3.jpg", type="image/webp")
@@ -112,7 +112,7 @@ section.others
                           .card__hover-group
                             h3.card__hover-title Отделка   
                             p.card__hover-description финишная отделка шелковисто-матовая или глянцевая
-                          .button.card__hover-button.button--primary Посмотреть подробности
+                          a(href="product.html").button.card__hover-button.button--primary Посмотреть подробности
                       picture
                         source(media="(min-width: 320px)", srcset="assets/img/models/1.webp", type="image/webp")
                         source(media="(min-width: 320px)", srcset="assets/img/models/1.jpg", type="image/webp")
@@ -141,7 +141,7 @@ section.others
                           .card__hover-group
                             h3.card__hover-title Отделка   
                             p.card__hover-description финишная отделка шелковисто-матовая или глянцевая
-                          .button.card__hover-button.button--primary Посмотреть подробности
+                          a(href="product.html").button.card__hover-button.button--primary Посмотреть подробности
                       picture
                         source(media="(min-width: 320px)", srcset="assets/img/models/2.webp", type="image/webp")
                         source(media="(min-width: 320px)", srcset="assets/img/models/2.jpg", type="image/webp")
@@ -170,7 +170,7 @@ section.others
                           .card__hover-group
                             h3.card__hover-title Отделка   
                             p.card__hover-description финишная отделка шелковисто-матовая или глянцевая
-                          .button.card__hover-button.button--primary Посмотреть подробности
+                          a(href="product.html").button.card__hover-button.button--primary Посмотреть подробности
                       picture
                         source(media="(min-width: 320px)", srcset="assets/img/models/3.webp", type="image/webp")
                         source(media="(min-width: 320px)", srcset="assets/img/models/3.jpg", type="image/webp")
@@ -206,7 +206,7 @@ section.others
                           .card__hover-group
                             h3.card__hover-title Отделка   
                             p.card__hover-description финишная отделка шелковисто-матовая или глянцевая
-                          .button.card__hover-button.button--primary Посмотреть подробности
+                          a(href="product.html").button.card__hover-button.button--primary Посмотреть подробности
                       picture
                         source(media="(min-width: 320px)", srcset="assets/img/models/1.webp", type="image/webp")
                         source(media="(min-width: 320px)", srcset="assets/img/models/1.jpg", type="image/webp")
@@ -235,7 +235,7 @@ section.others
                           .card__hover-group
                             h3.card__hover-title Отделка   
                             p.card__hover-description финишная отделка шелковисто-матовая или глянцевая
-                          .button.card__hover-button.button--primary Посмотреть подробности
+                          a(href="product.html").button.card__hover-button.button--primary Посмотреть подробности
                       picture
                         source(media="(min-width: 320px)", srcset="assets/img/models/2.webp", type="image/webp")
                         source(media="(min-width: 320px)", srcset="assets/img/models/2.jpg", type="image/webp")
@@ -264,7 +264,7 @@ section.others
                           .card__hover-group
                             h3.card__hover-title Отделка   
                             p.card__hover-description финишная отделка шелковисто-матовая или глянцевая
-                          .button.card__hover-button.button--primary Посмотреть подробности
+                          a(href="product.html").button.card__hover-button.button--primary Посмотреть подробности
                       picture
                         source(media="(min-width: 320px)", srcset="assets/img/models/3.webp", type="image/webp")
                         source(media="(min-width: 320px)", srcset="assets/img/models/3.jpg", type="image/webp")
@@ -293,7 +293,7 @@ section.others
                           .card__hover-group
                             h3.card__hover-title Отделка   
                             p.card__hover-description финишная отделка шелковисто-матовая или глянцевая
-                          .button.card__hover-button.button--primary Посмотреть подробности
+                          a(href="product.html").button.card__hover-button.button--primary Посмотреть подробности
                       picture
                         source(media="(min-width: 320px)", srcset="assets/img/models/1.webp", type="image/webp")
                         source(media="(min-width: 320px)", srcset="assets/img/models/1.jpg", type="image/webp")
@@ -322,7 +322,7 @@ section.others
                           .card__hover-group
                             h3.card__hover-title Отделка   
                             p.card__hover-description финишная отделка шелковисто-матовая или глянцевая
-                          .button.card__hover-button.button--primary Посмотреть подробности
+                          a(href="product.html").button.card__hover-button.button--primary Посмотреть подробности
                       picture
                         source(media="(min-width: 320px)", srcset="assets/img/models/2.webp", type="image/webp")
                         source(media="(min-width: 320px)", srcset="assets/img/models/2.jpg", type="image/webp")
@@ -351,7 +351,7 @@ section.others
                           .card__hover-group
                             h3.card__hover-title Отделка   
                             p.card__hover-description финишная отделка шелковисто-матовая или глянцевая
-                          .button.card__hover-button.button--primary Посмотреть подробности
+                          a(href="product.html").button.card__hover-button.button--primary Посмотреть подробности
                       picture
                         source(media="(min-width: 320px)", srcset="assets/img/models/3.webp", type="image/webp")
                         source(media="(min-width: 320px)", srcset="assets/img/models/3.jpg", type="image/webp")
