--- a/src/scss/components/vacancies/_vacancies-hero.scss
+++ b/src/scss/components/vacancies/_vacancies-hero.scss
@@ -89,6 +89,7 @@
             margin-right: 2px;
             margin-left: 2px;
             margin-bottom: 5px;
+            color: #FFFFFF;
 
             &::after {
                 content: '';
