--- a/src/views/_includes/blocks/questions/hero.pug
+++ b/src/views/_includes/blocks/questions/hero.pug
@@ -7,8 +7,8 @@ section.vacanciesHero.questionsHero
   .hero__container.container
     .hero__title.title Полезная информация от&nbsp;команды КухниСити
     .hero__block 
-      .hero__tab Как?
-      .hero__tab Большие кухни
-      .hero__tab Интерьеры
-      .hero__tab Лайфаки
-      .hero__tab Маленькие кухни
+      a(href="#").hero__tab Как?
+      a(href="#").hero__tab Большие кухни
+      a(href="#").hero__tab Интерьеры
+      a(href="#").hero__tab Лайфаки
+      a(href="#").hero__tab Маленькие кухни
