--- a/src/views/_includes/blocks/questions/cards2.pug
+++ b/src/views/_includes/blocks/questions/cards2.pug
@@ -30,7 +30,7 @@ section.newsCards
 
 .projects.newsProjects2
    .newsProjects2__wrap
-      .container
+      .container.projects__info-container
         .projects__info(style="left:0")
           p.projects__info-date 5 февраля 2020
           h3.projects__info-name Обновление коллекции кухонь
