--- a/src/scss/components/_benefits.scss
+++ b/src/scss/components/_benefits.scss
@@ -5,17 +5,15 @@
     &__container {
         padding-top: 26px;
         padding-right: 0;
-        padding-left: 0;
+        padding-left: 25px;
     }
 
     &__swiper-slide {
         display: flex;
-        width: 1210px !important;
+        width: 1100px !important;
     }
 
-    &__swiper-container {
-        padding-left: 25px;
-    }
+
 
     &__card {
         background-color: #FFFFFF;
@@ -25,6 +23,7 @@
         padding-left: 36px;
         margin-right: 10px;
         padding-right: 37px;
+
 
         &-title {
             font-size: 18px;
@@ -41,6 +40,7 @@
             color: #868686;
             // width: 197px;
             letter-spacing: 0;
+            // margin-bottom: 20px;
         }
 
         &:nth-child(1) {
@@ -55,6 +55,7 @@
 
         &:nth-child(4) {
             width: 300px;
+            margin-right: 0;
         }
 
     }
