--- a/src/views/questions.pug
+++ b/src/views/questions.pug
@@ -11,7 +11,7 @@ html(lang="ru", class="no-js")
         block header
             include _includes/blocks/header
 
-        .content#vacancies
+        .content#questions
             block content
                 block hero
                     include _includes/blocks/questions/hero
