--- a/src/scss/contacts.scss
+++ b/src/scss/contacts.scss
@@ -19,6 +19,7 @@
 @import "components/header";
 @import "components/contacts/contacts-hero.scss";
 @import "components/product/product-benefits";
+@import "components/contacts/region.scss";
 @import "components/contactUs";
 @import "components/social";
 @import "components/footer";
