--- a/src/scss/contacts.scss
+++ b/src/scss/contacts.scss
@@ -20,6 +20,7 @@
 @import "components/contacts/contacts-hero.scss";
 @import "components/product/product-benefits";
 @import "components/contacts/region.scss";
+@import "components/contacts/location.scss";
 @import "components/contactUs";
 @import "components/social";
 @import "components/footer";
