--- a/src/scss/components/_modal.scss
+++ b/src/scss/components/_modal.scss
@@ -29,6 +29,8 @@
     .policy {
         width: 279px;
         letter-spacing: 0.035em;
+        margin-right: auto;
+        margin-right: auto;
 
     }
 
@@ -53,6 +55,7 @@
 
     &__title {
         margin-bottom: 18px;
+        text-align: center;
     }
 
     &__description {
@@ -60,6 +63,8 @@
         width: 238px;
         margin-bottom: 63px;
         color: #494949;
+        margin-left: auto;
+        margin-right: auto;
     }
 
     &__close {
