--- a/src/scss/contentPage.scss
+++ b/src/scss/contentPage.scss
@@ -40,6 +40,7 @@
 @import "components/media";
 @import "components/product/product-media";
 @import "components/content/contentPage-media";
+@import "components/vacancies/vacancies-media";
 
 #contentPage {
     background: #f4f4f4;
