--- a/src/views/_includes/blocks/vacancies/chars.pug
+++ b/src/views/_includes/blocks/vacancies/chars.pug
@@ -43,7 +43,8 @@ section.chars.vacanciesChars
                     button.vacancy__addFile.addFile Прикрепите ваше резюме
                     button.mainForm__button.button.button--primary.vacancy__button Отправить
                 p.policy.vacancy__policy Отправляя контакты, вы соглашаетесь с <a href="#">политикой конфиденциальности</a>
-        
+        .chars__line
+
         .chars__expand-button.title Дизайнер консультант (без опыта работы)
         .chars__expand 
            .vacancy
@@ -86,6 +87,7 @@ section.chars.vacanciesChars
                     button.vacancy__addFile.addFile Прикрепите ваше резюме
                     button.mainForm__button.button.button--primary.vacancy__button Отправить
                 p.policy.vacancy__policy Отправляя контакты, вы соглашаетесь с <a href="#">политикой конфиденциальности</a>
+        .chars__line
 
         .chars__expand-button.title Администратор мебельного салона
         .chars__expand 
@@ -129,3 +131,4 @@ section.chars.vacanciesChars
                     button.vacancy__addFile.addFile Прикрепите ваше резюме
                     button.mainForm__button.button.button--primary.vacancy__button Отправить
                 p.policy.vacancy__policy Отправляя контакты, вы соглашаетесь с <a href="#">политикой конфиденциальности</a>
+        .chars__line
