--- a/src/scss/components/product/_chars.scss
+++ b/src/scss/components/product/_chars.scss
@@ -1,15 +1,25 @@
 .chars {
     background-color: #f4f4f4;
 
+    &__line {
+        width: 100%;
+        height: 1px;
+        background-color: #d3d3d3;
+        margin-bottom: 20px;
+        margin-top: -20px;
+    }
+
 
     &__container {
         padding-top: 58px;
         // overflow: visible;
         // padding-right: 0;
-        max-width: 450px;
+        // max-width: 450px;
         margin-left: auto;
         margin-right: auto;
         padding-bottom: 90px;
+        // padding-left: 0;
+        // padding-right: 0;
     }
 
     &__swiper {
@@ -23,7 +33,9 @@
         overflow: hidden;
         transition: max-height 0.2s ease-in-out;
         margin-bottom: 30px;
-        border-bottom: 1px solid #d3d3d3;
+        margin-right: -25px;
+        padding-right: 25px;
+        // border-bottom: 1px solid #d3d3d3;
 
         &:nth-last-child(1) {
             margin-bottom: 0;
@@ -100,6 +112,7 @@
             &-container {
                 padding-right: 25px;
                 margin-bottom: 64px;
+                margin-right: -25px;
             }
 
 
@@ -110,4 +123,119 @@
 
 
 
+}
+
+.chars-description {
+
+    // padding-bottom: 29px;
+    &__swiper-button {
+
+        &-next,
+        &-prev {
+            display: none !important;
+        }
+    }
+
+
+    .chars {
+        &__info-description {
+            max-width: 100%;
+            margin-bottom: 30px;
+        }
+    }
+
+    .articles__button {
+        display: none;
+    }
+
+    .articles__swiper {
+        &-container2 {
+            margin-bottom: 29px;
+            margin-right: -25px !important;
+        }
+
+        &-wrapper {
+            padding-bottom: 21px !important;
+        }
+
+        // &-button {
+
+        //     &-next,
+        //     &-prev {
+        //         display: none !important;
+        //     }
+        // }
+    }
+}
+
+.chars-materials {
+
+    &__card {
+        margin-bottom: 42px;
+    }
+
+    .benefits__card-title {
+        color: $color-red;
+        margin-bottom: 10px;
+    }
+}
+
+.chars-feedback {
+    position: relative;
+
+    .feedback {
+        &__swiper-container {
+            margin-bottom: 62px;
+            margin-right: -25px;
+        }
+
+        &__swiper-wrapper {
+            padding-bottom: 50px !important;
+        }
+    }
+
+    &__block {
+        display: flex;
+        flex-direction: column;
+        margin-right: 25px;
+
+
+    }
+
+    &__wrap {
+        display: flex;
+        align-items: baseline;
+        flex-wrap: wrap;
+    }
+
+    .banner {
+        &__title {
+            margin-top: 17px;
+            margin-bottom: 5px;
+            width: auto;
+            font-size: 20px;
+        }
+
+        &__card-quantity {
+            margin-top: 0;
+            text-align: left;
+            font-size: 8px;
+        }
+
+        &__card-rate {
+            font-size: 20px;
+
+            &::after {
+                width: 18.15px;
+                height: 17.45px;
+            }
+        }
+    }
+
+    &__button {
+        flex-basis: 100%;
+        margin-bottom: 24px;
+        margin-top: 39px;
+        font-size: 14px;
+    }
 }
