--- a/src/scss/product.scss
+++ b/src/scss/product.scss
@@ -22,6 +22,7 @@
 @import "components/product/product-benefits";
 @import "components/product/chars";
 @import "components/bonuses";
+@import "components/feedback";
 @import "components/product/projects";
 @import "components/product/questions";
 @import "components/product/getProject";
