--- a/src/views/_includes/blocks/product/chars.pug
+++ b/src/views/_includes/blocks/product/chars.pug
@@ -39,5 +39,122 @@ section.chars
                                 .chars__info-description Глухой, со стеклом(рамка), со стеклом АВ арки вверх, со стеклом АВН арки вверх-вниз
 
                 .swiper-scrollbar.chars__swiper-scrollbar
-                               
+        .chars__line
+
+        .chars__expand-button.title Описание
+        .chars__expand.chars-description
+            p.chars__info-description Новая модель Ancona выполнена в классическом стиле. Возможно исполнение как в матовом, так и в глянцевом варианте. Возможно применение патины, а также окрашивание фасадов без применения патины. Принципиальное отличие - новые дугообразные арочные фасады с аркой наверх и аркой вверх-вниз в зависимости от высоты и ширины. У кухонного гарнитура предусмотрено три персонализированных стекла, а также возможно применение любых стекол из коллекции KÜCHENBERG. Декоративные элементы наверху в данной модели - повторение декоров КГ Bristel, декоративные элементы пилястры  - из модели Marya. Возможно использование фасадов рамочных со стеклом, прямых, фасадов с перекрестием и так называемой арки. 
+            .swiper-container.articles__swiper-container2
+                .swiper-wrapper.articles__swiper-wrapper
+
+                    .swiper-slide.articles__swiper-slide.articles__swiper-slide2
+                        .articles__card
+                            picture.articles__card-img
+                                source(media="(min-width: 320px)", srcset="assets/img/articles/winter.webp", type="image/webp")
+                                source(media="(min-width: 320px)", srcset="assets/img/articles/winter.jpg", type="image/jpg")
+                                img(src="assets/img/articles/photo2.png", alt="photo")
+                                .articles__card-label сезон
+                                p.articles__card-description Последний день зимы в Казани
+                            a(data-fancybox, href="https://www.youtube.com/watch?v=_sI_Ps7JSEk").articles__card-button
+                    
+                    .swiper-slide.articles__swiper-slide.articles__swiper-slide2
+                        .articles__card
+                            picture.articles__card-img
+                                source(media="(min-width: 320px)", srcset="assets/img/articles/photo3.webp", type="image/webp")
+                                source(media="(min-width: 320px)", srcset="assets/img/articles/photo3.png", type="image/png")
+                                img(src="assets/img/articles/photo2.png", alt="photo")
+                                .articles__card-label экономия
+                                p.articles__card-description Мастер-класс по выбору кухни
+                            a(data-fancybox, href="https://www.youtube.com/watch?v=_sI_Ps7JSEk").articles__card-button
+                    
+                    .swiper-slide.articles__swiper-slide.articles__swiper-slide2
+                        .articles__card
+                            picture.articles__card-img
+                                source(media="(min-width: 320px)", srcset="assets/img/articles/winter.webp", type="image/webp")
+                                source(media="(min-width: 320px)", srcset="assets/img/articles/winter.jpg", type="image/jpg")
+                                img(src="assets/img/articles/photo2.png", alt="photo")
+                                .articles__card-label сезон
+                                p.articles__card-description Последний день зимы в Казани
+                            a(data-fancybox, href="https://www.youtube.com/watch?v=_sI_Ps7JSEk").articles__card-button
+                    
+                    .swiper-slide.articles__swiper-slide.articles__swiper-slide2
+                        .articles__card
+                            picture.articles__card-img
+                                source(media="(min-width: 320px)", srcset="assets/img/articles/photo3.webp", type="image/webp")
+                                source(media="(min-width: 320px)", srcset="assets/img/articles/photo3.png", type="image/png")
+                                img(src="assets/img/articles/photo2.png", alt="photo")
+                                .articles__card-label экономия
+                                p.articles__card-description Мастер-класс по выбору кухни
+                            a(data-fancybox, href="https://www.youtube.com/watch?v=_sI_Ps7JSEk").articles__card-button
+                    
+                .swiper-scrollbar.chars-image__swiper-scrollbar.chars-description__swiper-scrollbar
+                .swiper-button-prev.chars-description__swiper-button-prev.bonuses__swiper-button-prev
+                .swiper-button-next.chars-description__swiper-button-next.bonuses__swiper-button-next
+
+            .button.articles__button.button--bordered Посмотреть все
+        .chars__line
+
+        .chars__expand-button.title Материалы
+        .chars__expand.chars-materials
+            .chars-materials__wrap      
+                    .chars-materials__card
+                        .benefits__card-title Экологически чистый материал
+                        .benefits__card-description Каждая деталь кухни изготовлена из ДСП и покрыта слоем натурального шпона высшего сорта. Полученный из теплого дуба или прохладного ясеня, они отделаны экологически чистым лаком на водной основе и нетоксичными клеями. 
+                    .chars-materials__card
+                        .benefits__card-title Обработка раствором серебра
+                        .benefits__card-description Фасады и корпус кухни проходят антибактериальную обработку природным антибиотиком. Он уничтожает вредные химические примеси, аллергенную пыль и бактерии после производственных работ. 
+        .chars__line
+
+        .chars__expand-button.title Отзывы
+        .chars__expand.chars-feedback
+            .chars-feedback__wrap
+                div.chars-feedback__block
+                    .banner__title Рейтинг кухни 
+                    p.banner__card-quantity На основе 85 отзывов
+                .banner__card-rate 4,9
+                button.button.button--bordered.chars-feedback__button Оставить отзыв
+
+            .swiper-container.feedback__swiper-container
+                .swiper-wrapper.feedback__swiper-wrapper
+                    .swiper-slide.feedback__swiper-slide
+                        .feedback__card
+                            .feedback__card-img
+                                img(src="assets/img/feedback/kitchen1.jpg", alt="kitchen")
+                                a(href="#").feedback__card-link
+                                    img(src="assets/img/feedback/card-link.svg", alt="arrow").feedback__card-arrow
+                            .feedback__info
+                                .feedback__user
+                                    img.feedback__user-social(src="assets/img/feedback/vk.svg", alt="vk")
+                                    span.feedback__user-name Андрей Иванов
+                                p.feedback__card-text Спасибо огромное, работа вашей команды бесценный вклад в счастье многих людей, а&nbsp;теперь и частичка моей радости😊 Все оказалось совсем не сложно и главное быстро!!! Вы огромные молодцы🙏
+                                .span.feedback__card-date 06.05.2019 в 15:20
+                                a(href="#").feedback__card-button Перейти к отзыву
+                    .swiper-slide.feedback__swiper-slide
+                        .feedback__card
+                            .feedback__card-img
+                                img(src="assets/img/feedback/kitchen2.jpg", alt="kitchen")
+                                a(href="#").feedback__card-link.feedback__card-link--light
+                                    img(src="assets/img/feedback/card-link.svg", alt="arrow").feedback__card-arrow
+                            .feedback__info
+                                .feedback__user
+                                    img.feedback__user-social(src="assets/img/feedback/instagram.svg", alt="instagram")
+                                    span.feedback__user-name JULLIAS_23
+                                p.feedback__card-text Мой дизайнер уже давно просил разместить отзыв, но время нашлось только теперь во время карантина. Если вы приняли решение купить новую кухню от Кухни-Сити, то я могу порекомендовать салон на Проспект Мира. Кухню заказала БристельМой... 
+                                .span.feedback__card-date 06.05.2019 в 15:20
+                                a(href="#").feedback__card-button Перейти к отзыву
+                    .swiper-slide.feedback__swiper-slide
+                        .feedback__card
+                            .feedback__card-img
+                                img(src="assets/img/feedback/kitchen1.jpg", alt="kitchen")
+                                a(href="#").feedback__card-link
+                                    img(src="assets/img/feedback/card-link.svg", alt="arrow").feedback__card-arrow
+                            .feedback__info
+                                .feedback__user
+                                    img.feedback__user-social(src="assets/img/feedback/vk.svg", alt="vk")
+                                    span.feedback__user-name Андрей Иванов
+                                p.feedback__card-text Спасибо огромное, работа вашей команды бесценный вклад в счастье многих людей, а&nbsp;теперь и частичка моей радости😊 Все оказалось совсем не сложно и главное быстро!!! Вы огромные молодцы🙏 
+                                .span.feedback__card-date 06.05.2019 в 15:20
+                                a(href="#").feedback__card-button Перейти к отзыву
+                    
+                .swiper-scrollbar.chars-image__swiper-scrollbar.chars-feedback__swiper-scrollbar
         .chars__line
