--- a/src/views/_includes/blocks/product/chars.pug
+++ b/src/views/_includes/blocks/product/chars.pug
@@ -118,6 +118,7 @@ section.chars
                 .swiper-wrapper.feedback__swiper-wrapper
                     .swiper-slide.feedback__swiper-slide
                         .feedback__card
+                            
                             .feedback__card-img
                                 img(src="assets/img/feedback/kitchen1.jpg", alt="kitchen")
                                 a(href="#").feedback__card-link
@@ -127,7 +128,14 @@ section.chars
                                     img.feedback__user-social(src="assets/img/feedback/vk.svg", alt="vk")
                                     span.feedback__user-name Андрей Иванов
                                 p.feedback__card-text Спасибо огромное, работа вашей команды бесценный вклад в счастье многих людей, а&nbsp;теперь и частичка моей радости😊 Все оказалось совсем не сложно и главное быстро!!! Вы огромные молодцы🙏
-                                .span.feedback__card-date 06.05.2019 в 15:20
+                                .feedback__card-date 06.05.2019 в 15:20
+                                    .rating-mini.feedback__rating
+                                        strong.rating-number 5
+                                        span.star-active
+                                        span.star-active
+                                        span.star-active
+                                        span.star-active
+                                        span.star-active
                                 a(href="#").feedback__card-button Перейти к отзыву
                     .swiper-slide.feedback__swiper-slide
                         .feedback__card
@@ -140,7 +148,14 @@ section.chars
                                     img.feedback__user-social(src="assets/img/feedback/instagram.svg", alt="instagram")
                                     span.feedback__user-name JULLIAS_23
                                 p.feedback__card-text Мой дизайнер уже давно просил разместить отзыв, но время нашлось только теперь во время карантина. Если вы приняли решение купить новую кухню от Кухни-Сити, то я могу порекомендовать салон на Проспект Мира. Кухню заказала БристельМой... 
-                                .span.feedback__card-date 06.05.2019 в 15:20
+                                .feedback__card-date 06.05.2019 в 15:20
+                                     .rating-mini.feedback__rating
+                                        strong.rating-number 5
+                                        span.star-active
+                                        span.star-active
+                                        span.star-active
+                                        span.star-active
+                                        span.star-active
                                 a(href="#").feedback__card-button Перейти к отзыву
                     .swiper-slide.feedback__swiper-slide
                         .feedback__card
@@ -153,7 +168,14 @@ section.chars
                                     img.feedback__user-social(src="assets/img/feedback/vk.svg", alt="vk")
                                     span.feedback__user-name Андрей Иванов
                                 p.feedback__card-text Спасибо огромное, работа вашей команды бесценный вклад в счастье многих людей, а&nbsp;теперь и частичка моей радости😊 Все оказалось совсем не сложно и главное быстро!!! Вы огромные молодцы🙏 
-                                .span.feedback__card-date 06.05.2019 в 15:20
+                                .feedback__card-date 06.05.2019 в 15:20
+                                     .rating-mini.feedback__rating
+                                        strong.rating-number 5
+                                        span.star-active
+                                        span.star-active
+                                        span.star-active
+                                        span.star-active
+                                        span.star-active
                                 a(href="#").feedback__card-button Перейти к отзыву
                     
                 .swiper-scrollbar.chars-image__swiper-scrollbar.chars-feedback__swiper-scrollbar
