--- a/src/scss/components/_media.scss
+++ b/src/scss/components/_media.scss
@@ -835,24 +835,34 @@
                 width: 15px;
             }
 
+            &-bottom {
+                flex-direction: row;
+                align-items: center;
+                right: 62px;
+            }
+
             &-date {
                 font-size: 14px;
                 line-height: 118.49%;
                 /* identical to box height, or 17px */
                 letter-spacing: 0.035em;
-                margin-top: 28px;
-                margin-right: 45px;
+                margin: 0;
+                // left: 260px;
             }
 
             &-button {
+                margin-left: 43px;
                 font-size: 16px;
                 width: 186px;
                 display: inline-block;
+                // bottom: 29px;
+                // right: 62px;
+
             }
 
             &-text {
                 width: 372px;
-                height: 110px;
+                // height: 110px;
             }
         }
 
@@ -2276,6 +2286,8 @@
             margin-bottom: 82px;
         }
 
+
+
         .social__block {
             top: 24px;
         }
@@ -3477,9 +3489,8 @@
                 width: 446px;
             }
 
-            &-date {
-                margin-top: 37px;
-                margin-right: 83px;
+            &-title {
+                font-size: 18px;
             }
 
             &-link {
@@ -3498,6 +3509,7 @@
                 /* identical to box height, or 22px */
                 letter-spacing: 0.105em;
                 width: 208px;
+                margin-left: 79px;
 
                 &::after {
                     width: 25.5px;
