--- a/src/scss/components/_media.scss
+++ b/src/scss/components/_media.scss
@@ -2869,6 +2869,13 @@
                     margin-right: 20px;
                 }
             }
+
+            // &--fixed {
+            //     .header__block-open {
+            //         font-size: 16px;
+            //         // height: 74px;
+            //     }
+            // }
         }
 
         &__logo {
